--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
-    "react-toastify": "^9.1.3",
     "swiper": "^10.2.0",
     "uuid": "^9.0.0",
     "zod": "^3.22.2"
